--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Tesla Game V1 Versiyon",
-  "description": " @TeslaGameBot'un Eski Alt Versiyon Projesi GitHub'da Kullanıcılara Açık Sunuldu.",
+  "description": " @QafqazTeslaBot'un Eski Alt Versiyon Projesi GitHub'da Kullanıcılara Açık Sunuldu.",
   "repository": "https://github.com/sirincay/TeslaGamev1",
   "logo": "https://avatars.githubusercontent.com/u/88708263?s=96&v=4",
   "keywords": ["telegram", "bot"],
@@ -15,7 +15,7 @@
     },
     "BOT_ISMI": {
       "description": "Botun Kullanıcı Adını '@' Olmadan Yazın",
-      "value": "TeslaGameBot"
+      "value": "QafqazTeslaBot"
     },
     "RAUND_SAYI": {
       "description": "RAUND SAYISI (3-5) İdeal aralık ",
